--- a/EmployeeCrudApi/EmployeeCrudApi/appsettings.json
+++ b/EmployeeCrudApi/EmployeeCrudApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:pob--sql-server01.database.windows.net,1433;Initial Catalog=pob--sql-bd;Persist Security Info=False;User ID=admi;Password=Pauli123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:pob-sql-server01.database.windows.net,1433;Initial Catalog=pob-sql-db;Persist Security Info=False;User ID=admi;Password=Pauli123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
